05.deployment/03.istio/02.canary-deployment/deployment-mouse-reviews-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mouse-reviews-2
  labels:
    app: mouse-reviews
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mouse-reviews
      version: v2
  template:
    metadata:
      labels:
        app: mouse-reviews
        version: v2
    spec:
      containers:
        - name: mouse-reviews
          image: mouse-reviews:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
