05.deployment/03.istio/02.canary-deployment/service-mouse-reviews.yaml
apiVersion: v1
kind: Service
metadata:
  name: mouse-reviews
  labels:
    app: mouse-reviews
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8080
  selector:
    app: mouse-reviews
